RTE: toolbar resizing layout bug (RT #33850)
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@17084 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/extensions/wikia/RTE/ckeditor/_source/skins/wikia/richcombo.css
+++ b/extensions/wikia/RTE/ckeditor/_source/skins/wikia/richcombo.css
@@ -59,6 +59,11 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	margin-left: 6px;
 }
 
+/* RT #33850 */
+.cke_skin_wikia .cke_browser_ie8 .cke_rcombo a {
+	margin-bottom: 5px;
+}
+
 .cke_skin_wikia .cke_hc .cke_rcombo a
 {
 	filter: alpha(opacity=100); /* IE */
